--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
   "name": "folio",
   "version": "2.0.0",
-=======
-  "name": "my-v0-project",
-  "version": "0.1.0",
->>>>>>> ac10148 (Initial commit)
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,29 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "gsap": "3.8.0",
-    "next": "12",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.32.12",
-    "typed.js": "^2.0.12",
-    "vanilla-tilt": "^1.7.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.4",
-    "autoprefixer": "^10.4.7",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.2.4"
-  },
-  "license": "MIT",
-  "copyright.owner": "Danil Gorbunov"
-}
-=======
+    "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -71,6 +44,8 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "latest",
+    "gsap": "3.8.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
@@ -84,10 +59,10 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.0.12",
+    "vanilla-tilt": "^1.7.0",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@emotion/is-prop-valid": "latest",
-    "framer-motion": "latest"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -96,6 +71,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "license": "MIT",
+  "copyright.owner": "Danil Gorbunov"
 }
->>>>>>> ac10148 (Initial commit)
